modify the index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Into to HTML</title>
 </head>
 <body>
-    
+    <center>
+        <h2>THIS IS MY FIRST WEBSITE</h2>
+    </center>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Soluta eveniet reprehenderit quam dolorum quisquam aspernatur 
+         dolore nam molestiae facilis, 
+        sapiente consequuntur quis iste minima, odio id ex illo! Et, magnam!
+    </p>
 </body>
 </html>
